docs/api/qiskit/0.19/qiskit.pulse.Drag.mdx
---
title: Drag
description: API reference for qiskit.pulse.Drag
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.Drag
---

# Drag

<Class id="qiskit.pulse.Drag" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/pulse_lib/parametric_pulses.py" signature="Drag(duration, amp, sigma, beta, name=None)" modifiers="class">
  The Derivative Removal by Adiabatic Gate (DRAG) pulse is a standard Gaussian pulse with an additional Gaussian derivative component. It is designed to reduce the frequency spectrum of a normal gaussian pulse near the $|1\rangle$ - $|2\rangle$ transition, reducing the chance of leakage to the $|2\rangle$ state.

$$
f(x) = Gaussian + 1j * beta * d/dx [Gaussian]
= Gaussian + 1j * beta * (-(x - duration/2) / sigma^2) [Gaussian]
$$

  where ‘Gaussian’ is:

$$
Gaussian(x, amp, sigma) = amp * exp( -(1/2) * (x - duration/2)^2 / sigma^2) )
$$

  **References**

  1.  [*Gambetta, J. M., Motzoi, F., Merkel, S. T. & Wilhelm, F. K. Analytic control methods for high-fidelity unitary operations in a weakly nonlinear oscillator. Phys. Rev. A 83, 012308 (2011).*](https://link.aps.org/doi/10.1103/PhysRevA.83.012308)

  2.  [*F. Motzoi, J. M. Gambetta, P. Rebentrost, and F. K. Wilhelm Phys. Rev. Lett. 103, 110501 – Published 8 September 2009.*](https://link.aps.org/doi/10.1103/PhysRevLett.103.110501)

  Initialize the drag pulse.

  **Parameters**

  *   **duration** (`int`) – Pulse length in terms of the the sampling period dt.
  *   **amp** (`complex`) – The amplitude of the Drag envelope.
  *   **sigma** (`float`) – A measure of how wide or narrow the Gaussian peak is; described mathematically in the class docstring.
  *   **beta** (`float`) – The correction amplitude.
  *   **name** (`Optional`\[`str`]) – Display name for this pulse envelope.

  ## Attributes

  <span id="drag-amp" />

  ### amp

  <Attribute id="qiskit.pulse.Drag.amp" attributeTypeHint="complex">
    The Gaussian amplitude.

    **Return type**

    `complex`
  </Attribute>

  <span id="drag-beta" />

  ### beta

  <Attribute id="qiskit.pulse.Drag.beta" attributeTypeHint="float">
    The weighing factor for the Gaussian derivative component of the waveform.

    **Return type**

    `float`
  </Attribute>

  <span id="drag-id" />

  ### id

  <Attribute id="qiskit.pulse.Drag.id" attributeTypeHint="int">
    Unique identifier for this pulse.

    **Return type**

    `int`
  </Attribute>

  <span id="drag-parameters" />

  ### parameters

  <Attribute id="qiskit.pulse.Drag.parameters" attributeTypeHint="Dict[str, Any]">
    Return a dictionary containing the pulse’s parameters.

    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>

  <span id="drag-sigma" />

  ### sigma

  <Attribute id="qiskit.pulse.Drag.sigma" attributeTypeHint="float">
    The Gaussian standard deviation of the pulse width.

    **Return type**

    `float`
  </Attribute>

  ## Methods

  <span id="drag-call" />

  ### \_\_call\_\_

  <Function id="qiskit.pulse.Drag.__call__" signature="Drag.__call__(channel)">
    Call self as a function.
  </Function>

  <span id="drag-draw" />

  ### draw

  <Function id="qiskit.pulse.Drag.draw" signature="Drag.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, interactive=False, scaling=None)">
    Plot the pulse.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples.
    *   **style** (*Optional\[*[*PulseStyle*](qiskit.visualization.pulse.qcstyle#qiskit.visualization.pulse.qcstyle.PulseStyle "qiskit.visualization.pulse.qcstyle.PulseStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **scaling** (`Optional`\[`float`]) – Deprecated, see scale

    **Returns**

    A matplotlib figure object of the pulse envelope

    **Return type**

    matplotlib.figure
  </Function>

  <span id="drag-get-sample-pulse" />

  ### get\_sample\_pulse

  <Function id="qiskit.pulse.Drag.get_sample_pulse" signature="Drag.get_sample_pulse()">
    Return a SamplePulse with samples filled according to the formula that the pulse represents and the parameter values it contains.

    **Return type**

    [`SamplePulse`](qiskit.pulse.pulse_lib.SamplePulse "qiskit.pulse.pulse_lib.sample_pulse.SamplePulse")
  </Function>

  <span id="drag-validate-parameters" />

  ### validate\_parameters

  <Function id="qiskit.pulse.Drag.validate_parameters" signature="Drag.validate_parameters()">
    Validate parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameters passed are not valid.

    **Return type**

    `None`
  </Function>
</Class>

